HP slider copy tweaks. Fix for 1px nav arrow shifts

--- a/css/index.css
+++ b/css/index.css
@@ -168,17 +168,19 @@ td {
 .slideNav {
     display:none;    
     position:fixed; 
-    top: 50%; 
-    margin-left: -15px; 
+    top: 50%;
+    left: 50%; 
+    margin-left: -443px; 
     width: 884px;
     z-index: 24;
     margin-top: -22px;
+    
     /*opacity: 0.6;*/
 }
 
 .nextSlideNav {
     cursor:pointer;
-    float:right;
+    padding-left:782px;
 }
 
 .prevSlideNav {
@@ -187,6 +189,7 @@ td {
 
 .prevSlideNav img, .nextSlideNav img {
     /*height: 48px;*/   
+    position:relative;
 }
 
 .slideInnerWhiteBox {
